--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,14 @@
-title:            Balzac
-tagline:          A beautiful theme.
-description:      Describe your website.
-canonical: http://jekyll.gtat.me
+title:            toblerzone
+tagline:          toby's blog!
+description:      Philosophy of Data, Fall 2017
 
 # Owner/author information
 owner:
-  name:           Cole Townsend
-  avatar:         avatar.png
-  bio:            "Aesthete & Athlete"
-  email:          cole@coletownsend.com
-  twitter:        twnsndco
-  github:         coletownsend
-  instagram:      ctrunsthis
-  dribbble:       coletownsend
-  disqus:         balzac
-  location:       "Buffalo, NY"
+  name:           Toby
+  bio:            "trying his best"
+  email:          tobylewkowicz@bennington.edu
+  twitter:        @seerBot
+  github:         tobeky
   # Plug in your disqus shortname!
 
 tools:
@@ -30,12 +24,8 @@ opengraph:
 links:
   - title: About
     url: /about
-  - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
-    external: true
-  - title: Cole Who?
-    url: http://coletownsend.com
-    external: true
+
+
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
