--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ owner:
   name:           Toby
   bio:            "trying his best"
   email:          tobylewkowicz@bennington.edu
-  twitter:        @seerBot
+  twitter:        seerBot
   github:         tobeky
   # Plug in your disqus shortname!
 
